--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,39 @@
     <string name="app_name">Gondi</string>
     <string name="home">Home</string>
     <string name="profile">Profile</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="sanskrit">Sanskrit(/ˈsænskrɪt/; attributively संस्कृत-, saṃskṛta- nominally संस्कृतम्, saṃskṛtam,
+        Sanskrit is a classical language belonging to the Indo-Aryan branch of the Indo-European languages.
+        It arose in South Asia after its predecessor languages had diffused there from the northwest in the late Bronze Age.
+        Sanskrit is the sacred language of Hinduism, the language of classical Hindu philosophy,
+        and of historical texts of Buddhism and Jainism. It was a link language in ancient and medieval South Asia,
+        and upon transmission of Hindu and Buddhist culture to Southeast Asia, East Asia and Central Asia in the early medieval era,
+        it became a language of religion and high culture, and of the political elites in some of these regions.As a result,
+        Sanskrit had a lasting effect on the languages of South Asia, Southeast Asia and East Asia,
+        especially in their formal and learned vocabularies.</string>
+
+
+    <string name="assamese">
+        Assamese[a] or Asamiya (অসমীয়া [ɔxɔmija])is an Indo-Aryan language spoken mainly in the north-eastern Indian state of Assam,
+        where it is an official language. It serves as a lingua franca of the wider region and has over 15 million native speakers
+        according to Ethnologue.Nefamese, an Assamese-based pidgin in Arunachal Pradesh, was used as the lingua franca till it was replaced by Hindi;
+        and Nagamese, an Assamese-based Creole language,continues to be widely used in Nagaland.
+        The Kamtapuri language of Rangpur division of Bangladesh and the Cooch Behar and Jalpaiguri districts of India are
+        linguistically closer to Assamese, though the speakers identify with the Bengali culture and the literary language.
+        In the past, it was the court language of the Ahom kingdom from the 17th century.
+        Along with other Eastern Indo-Aryan languages, Assamese evolved at least before the 7th century CE[10] from the middle
+        Indo-Aryan Magadhi Prakrit.Its sister languages include Angika, Bengali, Bishnupriya Manipuri, Chakma, Chittagonian,
+        Hajong, Rajbangsi, Maithili, Rohingya and Sylheti. It is written in the Assamese alphabet, an abugida system,
+        from left to right, with many typographic ligatures.
+    </string>
+
+    <string name="gondi">
+        Gondi (Gōṇḍī), natively known as Koitur (Kōī, Kōītōr), is a South-Central Dravidian language, spoken by about
+        three million Gondi people,chiefly in the Indian states of Madhya Pradesh, Maharashtra, Chhattisgarh, Andhra Pradesh,
+        Telangana and by small minorities in neighbouring states. Although it is the language of the Gond people, it is highly
+        endangered, with only one fifth of Gonds speaking the language. Gondi has a rich folk literature, examples of which are
+        wedding songs and narrations. Gondi people are ethnically related to the Telugus.
+        The origin of the name Gond, used by outsiders, is still uncertain. Some believe the word to derive from the Dravidian kond, meaning hill, similar to the Khonds of Odisha.
+        Another theory, according to Vol. 3 of the Worldmark Encyclopedia of Cultures and Daily Life, is that the name was given to them by the Mughal dynasty of the 16th–18th centuries.
+        It was the Mughals who first used the term "Gond", meaning "hill people", to refer to the group.
+    </string>
 </resources>
