--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,4 +37,6 @@
         Another theory, according to Vol. 3 of the Worldmark Encyclopedia of Cultures and Daily Life, is that the name was given to them by the Mughal dynasty of the 16th–18th centuries.
         It was the Mughals who first used the term "Gond", meaning "hill people", to refer to the group.
     </string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
